--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="djseol"/>
     <title>법인카드 결제내역 시스템</title>
     <link th:href="@{/css/libs/bootstrap_5.02/bootstrap.min.css}" rel="stylesheet"/>
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
 </head>
 
 <body>
@@ -16,38 +16,37 @@
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
                 <div class="text-center my-5">
-                    <h1>법인카드 내역</h1>
-                    <h1>결재 시스템</h1>
-<!--                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">-->
+                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
                 </div>
                 <div class="card shadow-lg">
                     <div class="card-body p-5">
+                        <h1 class="fs-4 card-title fw-bold mb-4">Login</h1>
                         <form method="POST" th:action="@{/login_proc}" class="needs-validation" novalidate="" autocomplete="off">
                             <div class="mb-3">
-                                <label class="mb-2 text-muted" for="userId">아이디</label>
-                                <input id="userId" type="text" class="form-control" name="userId" value="" required autofocus>
+                                <label class="mb-2 text-muted" for="email">E-Mail Address</label>
+                                <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
                                 <div class="invalid-feedback">
-                                    ID를 입력하십시오.
+                                    Email is invalid
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <div class="mb-2 w-100">
-                                    <label class="text-muted" for="userPasswd">패스워드</label>
-<!--                                    <a href="forgot.html" class="float-end">-->
-<!--                                        Forgot Password?-->
-<!--                                    </a>-->
+                                    <label class="text-muted" for="password">Password</label>
+                                    <a href="forgot.html" class="float-end">
+                                        Forgot Password?
+                                    </a>
                                 </div>
-                                <input id="userPasswd" type="password" class="form-control" name="userPasswd" required>
+                                <input id="password" type="password" class="form-control" name="password" required>
                                 <div class="invalid-feedback">
-                                    비밀번호를 입력하십시오.
+                                    Password is required
                                 </div>
                             </div>
 
                             <div class="d-flex align-items-center">
                                 <div class="form-check">
                                     <input type="checkbox" name="remember" id="remember" class="form-check-input">
-                                    <label for="remember" class="form-check-label">ID 저장</label>
+                                    <label for="remember" class="form-check-label">Remember Me</label>
                                 </div>
                                 <button type="submit" class="btn btn-primary ms-auto">
                                     Login
@@ -55,14 +54,14 @@
                             </div>
                         </form>
                     </div>
-<!--                    <div class="card-footer py-3 border-0">-->
-<!--                        <div class="text-center">-->
-<!--                            Don't have an account? <a href="register.html" class="text-dark">Create One</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <div class="card-footer py-3 border-0">
+                        <div class="text-center">
+                            Don't have an account? <a href="register.html" class="text-dark">Create One</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="text-center mt-5 text-muted">
-                    Copyright &copy; 2023 &mdash; (주)엑스퍼넷
+                    Copyright &copy; 2017-2021 &mdash; Your Company
                 </div>
             </div>
         </div>
