--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,8 +16,7 @@
         <div class="row justify-content-sm-center h-100">
             <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
                 <div class="text-center my-5">
-                    <h1>법인카드 내역</h1>
-                    <h1>결재 시스템</h1>
+                    <h1>Please Login</h1>
 <!--                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">-->
                 </div>
                 <div class="card shadow-lg">
@@ -62,7 +61,7 @@
 <!--                    </div>-->
                 </div>
                 <div class="text-center mt-5 text-muted">
-                    Copyright &copy; 2023 &mdash; (주)엑스퍼넷
+                    Copyright &copy; 2023 &mdash; Expernet Co., Ltd.
                 </div>
             </div>
         </div>
