--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="author" content="djseol"/>
     <title>법인카드 결제내역 시스템</title>
     <link th:href="@{/css/libs/bootstrap_5.02/bootstrap.min.css}" rel="stylesheet"/>
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
+    <script th:src="@{/js/libs/jquery/jquery-3.6.1.min.js}"></script>
 </head>
 
 <body>
@@ -45,8 +45,8 @@
 
                             <div class="d-flex align-items-center">
                                 <div class="form-check">
-                                    <input type="checkbox" name="remember" id="remember" class="form-check-input">
-                                    <label for="remember" class="form-check-label">ID 저장</label>
+                                    <input type="checkbox" name="checkId" id="checkId" class="form-check-input">
+                                    <label for="checkId" class="form-check-label">ID 저장</label>
                                 </div>
                                 <button type="submit" class="btn btn-primary ms-auto">
                                     Login
@@ -68,6 +68,11 @@
     </div>
 </section>
 
-<!--<script th:src="@{/js/corpcard/login.js}"></script>-->
+<script type="text/javascript" th:src="@{/js/corpcard/login.js}"></script>
+<script>
+    $(document).ready(function() {
+        $login.init();
+    });
+</script>
 </body>
 </html>
