--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content="OJT-Project"/>
-    <meta name="author" content="djseol"/>
-    <title>법인카드 결제내역 시스템</title>
-    <link th:href="@{/css/libs/bootstrap_5.02/bootstrap.min.css}" rel="stylesheet"/>
-    <script th:src="@{/js/libs/jquery/jquery-3.6.1.min.js}"></script>
+    <div th:replace="/fragments/header.html :: fragment-header"></div>
 </head>
 
 <body>
