--- a/src/main/resources/templates/payhist.html
+++ b/src/main/resources/templates/payhist.html
@@ -1,34 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content="OJT-Project"/>
-    <meta name="author" content="djseol"/>
-    <title>법인카드 결제내역 시스템</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" th:href="@{/icons/favicon.ico}"/>
-    <!-- Bootstrap icons-->
-    <link th:href="@{/font/bootstrap-icons.css}" rel="stylesheet"/>
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link th:href="@{/css/libs/bootstrap_5.02/bootstrap.css}" rel="stylesheet"/>
+    <div th:replace="/fragments/header.html :: fragment-header"></div>
 </head>
 <body>
-<!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-lg-5">
-        <a class="navbar-brand" th:href="@{/payhist}">법인카드 결제내역 시스템</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/payhist}">결제내역</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/approval}"></a>결재</li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/manage}">관리자</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- Header-->
+<!-- navbar -->
+<div th:replace="/fragments/nav.html :: fragment-nav"></div>
 <header class="py-5">
     <div class="container px-lg-5">
         <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
@@ -104,7 +81,7 @@
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+    <div th:replace="/fragments/footer.html :: fragment-footer"></div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
