타임리프 navbar 설정 완료

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <div th:replace="/fragments/header.html :: fragment-header"></div>
+<head th:replace="/fragments/header.html :: fragment-header">
 </head>
-
 <body>
 <section class="h-100">
     <div class="container h-100">
