--- a/src/main/resources/templates/payhist.html
+++ b/src/main/resources/templates/payhist.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <div th:replace="/fragments/header.html :: fragment-header"></div>
+<head th:replace="/fragments/header.html :: fragment-header">
 </head>
 <body>
 <!-- navbar -->
@@ -80,8 +79,7 @@
     </div>
 </section>
 <!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div th:replace="/fragments/footer.html :: fragment-footer"></div>
+<footer th:replace="/fragments/footer.html :: fragment-footer">
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
