결제내역 조회 구현 중

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,5 +18,7 @@
         <script th:src="@{/js/libs/bootstrap_5.02/daterangepicker.js}"></script>
         <!-- echarts -->
         <script th:src="@{/js/libs/echart-5.1.2/echarts.min.js}"></script>
+        <!-- common JS -->
+        <script th:src="@{/js/corpcard/common.js}"></script>
     </head>
 </html>
