--- a/src/main/resources/templates/payhist.html
+++ b/src/main/resources/templates/payhist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="/fragments/header.html :: fragment-header">
 </head>
 <body>
@@ -110,7 +110,7 @@
                         </svg>
                     </th>
                     <td>
-                        <input type="date" class="form-control" id="useDate" name="useDate">
+                        <input type="date" class="form-control" id="useDate" name="useDate" required>
                     </td>
                     <th>금액(원)
                         <svg class="mb-1" xmlns="http://www.w3.org/2000/svg" width="8" height="8"
@@ -119,7 +119,8 @@
                         </svg>
                     </th>
                     <td>
-                        <input type="text" class="form-control" name="money" required>
+                        <input type="text" class="form-control input-money" style="text-align:right;" name="money"
+                               id="histMoney" required>
                     </td>
                 </tr>
                 <tr>
@@ -138,19 +139,19 @@
             </table>
             <div class="text-center mb-4">
                 <button type="submit" id="payhistSubmit" class="btn btn-secondary">작성</button>
-                <button type="button" class="btn btn-gray">초기화</button>
+                <button type="button" id="payhistReset" class="btn btn-gray">초기화</button>
             </div>
         </form>
         <div class="mb-1 fs-4 gx-5 row">
             <div class="col">
-                총 <span class="fw-bold" id="listTotCnt"></span> 건이 조회되었습니다. - <span class="fw-bold" id="submitStts"></span>
+                총 <span class="fw-bold" id="listTotCnt"></span>건이 조회되었습니다. - <span class="fw-bold" id="stateNm"></span>
             </div>
             <div class="col text-end">
                 <button class="btn btn-secondary" id="payhistAtch">첨부파일</button>
                 <button type="button" class="btn btn-danger">PDF</button>
                 <button type="button" class="btn btn-success">CSV</button>
                 <button type="button" class="btn btn-primary">제출</button>
-                <button type="button" class="btn btn-secondary">삭제</button>
+                <button type="button" id="deleteRow" class="btn btn-secondary">삭제</button>
             </div>
         </div>
         <div class="table-responsive-xxl">
@@ -159,7 +160,7 @@
                 <thead class="table-secondary">
                 <tr>
                     <th scope="col">
-                        <input class="form-check-input me-1" type="checkbox" id="checkbox-all">
+                        <input class="form-check-input me-1" type="checkbox" id="checkAll">
                     </th>
                     <th scope="col">사용일</th>
                     <th scope="col">카드 정보</th>
@@ -178,39 +179,6 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <th scope="row">
-                        <input class="form-check-input me-1" type="checkbox" value="">
-                    </th>
-                    <td>12.04</td>
-                    <td>신한 XXXX</td>
-                    <td>XX 프로젝트 중식</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>28,000</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>28,000</td>
-                </tr>
-                <tr class="fw-bold">
-                    <th colspan="4">합계</th>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>28,000</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>28,000</td>
-                </tr>
                 </tbody>
             </table>
         </div>
