--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,6 +18,11 @@
         <script th:src="@{/js/libs/bootstrap_5.02/daterangepicker.js}"></script>
         <!-- echarts -->
         <script th:src="@{/js/libs/echart-5.1.2/echarts.min.js}"></script>
+        <!-- jexcel -->
+        <script th:src="@{/js/libs/jexcel/jexcel-1.0.5.js}"></script>
+        <script th:src="@{/js/libs/jexcel/jszip-3.1.5.min.js}"></script>
+        <script th:src="@{/js/libs/jexcel/FileSaver-1.2.2_1.js}"></script>
+        <script th:src="@{/js/libs/jexcel/xlsx.full.min.js}"></script>
         <!-- common JS -->
         <script th:src="@{/js/corpcard/common.js}"></script>
     </head>
