결제내역 PDF 구현 완료

--- a/src/main/resources/templates/payhist.html
+++ b/src/main/resources/templates/payhist.html
@@ -150,8 +150,8 @@
             </div>
             <div class="col text-end">
                 <button class="btn btn-secondary" id="histAtchBtn">첨부파일</button>
-                <button type="button" class="btn btn-danger" id="histPdfBtn">PDF</button>
-                <button type="button" class="btn btn-success" id="histCsvBtn">CSV</button>
+                <button type="button" class="btn btn-danger" id="histPDFBtn">PDF</button>
+                <button type="button" class="btn btn-success" id="histCSVBtn">CSV</button>
                 <button type="button" class="btn btn-primary" id="submitHist">제출</button>
                 <button type="button" id="deleteRow" class="btn btn-secondary">삭제</button>
             </div>
